fixed the submit css, was wrong color

--- a/css/careers-form.css
+++ b/css/careers-form.css
@@ -29,6 +29,7 @@
   -webkit-align-items: center;
   align-content: center;
   -webkit-align-content: center;
+  margin-bottom: 1rem;
 }
 
 input[type=text], select {
@@ -42,7 +43,7 @@ input[type=text], select {
 }
 
 input[type=submit] {
-  background-color: #00f596;;
+  background-color: #00F596;;
   color: white;
   padding: 12px 20px;
   border: none;
